Bug 332986 - Email message body is not displayed
Summary: Email message body is not displayed
Status: RESOLVED FIXED
Alias: None
Product: trojita
Classification: Applications
Component: Ubuntu (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: trojita-ubuntu-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-02 22:55 UTC by Jono Bacon
Modified: 2014-04-11 10:56 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jono Bacon 2014-04-02 22:55:47 UTC
When I see my list of messages and select a message to view, I don't see the body of the message appear. I only see the message header.
Comment 1 Jan Kundrát 2014-04-11 10:31:19 UTC
Git commit 910adc47a4efde1a64b3b63b360c45edd7f753ec by Jan Kundrát, on behalf of Boren Zhang.
Committed on 10/04/2014 at 12:19.
Pushed by jkt into branch 'master'.

Add a bridge between the QQuickNetworkReply and QNetworkReply

This is simply a wrapper class which provides the data made available via the
QNetworkReply into the QML WebView. The Qt5's WebView API does not support
providing a QNetworkAccessManager anymore, so this is our best bet.
REVIEW: 117445

M  +1    -0    CMakeLists.txt
M  +1    -1    src/Imap/Model/ImapAccess.cpp
M  +2    -2    src/Imap/Model/ImapAccess.h
M  +7    -0    src/Imap/Network/MsgPartNetAccessManager.cpp
M  +1    -0    src/Imap/Network/MsgPartNetAccessManager.h
A  +49   -0    src/Imap/Network/QQuickNetworkReplyWrapper.cpp     [License: GPL (v2/3)]
A  +49   -0    src/Imap/Network/QQuickNetworkReplyWrapper.h     [License: GPL (v2/3)]
M  +1    -4    src/Ubuntu/qml/trojita/OneMessagePage.qml

http://commits.kde.org/trojita/910adc47a4efde1a64b3b63b360c45edd7f753ec
Comment 2 Jan Kundrát 2014-04-11 10:56:51 UTC
Git commit 69f829ecb8792a87872602e6d4f22e2e335d48de by Jan Kundrát, on behalf of Boren Zhang.
Committed on 10/04/2014 at 12:19.
Pushed by jkt into branch 'master'.

Add a bridge between the QQuickNetworkReply and QNetworkReply

This is simply a wrapper class which provides the data made available via the
QNetworkReply into the QML WebView. The Qt5's WebView API does not support
providing a QNetworkAccessManager anymore, so this is our best bet.
REVIEW: 117445

M  +1    -0    CMakeLists.txt
M  +1    -1    src/Imap/Model/ImapAccess.cpp
M  +2    -2    src/Imap/Model/ImapAccess.h
M  +7    -0    src/Imap/Network/MsgPartNetAccessManager.cpp
M  +1    -0    src/Imap/Network/MsgPartNetAccessManager.h
A  +49   -0    src/Imap/Network/QQuickNetworkReplyWrapper.cpp     [License: GPL (v2/3)]
A  +49   -0    src/Imap/Network/QQuickNetworkReplyWrapper.h     [License: GPL (v2/3)]
M  +1    -4    src/Ubuntu/qml/trojita/OneMessagePage.qml

http://commits.kde.org/trojita/69f829ecb8792a87872602e6d4f22e2e335d48de