Add a bridge between the QQuickNetworkReply and QNetworkReply

This is simply a wrapper class which provides the data made available via the
QNetworkReply into the QML WebView. The Qt5's WebView API does not support
providing a QNetworkAccessManager anymore, so this is our best bet.

BUG: 332986
REVIEW: 117445